# Magnetometer

./: .gitignore  README.md  Sensor.cfg  main.cpp
PICO/: CMakeLists.txt  CMakeLists.txt.save  hello_uart.cc  hello_world.cpp  hello_world2.c  picow_udp_beacon.cc  setup.sh
R/: mag_data.Rmd  readme.txt  test_mag.Rmd
cpp/: readme.txt
data/: Mag20240131:224422.xls  app-log_2024-02-20-11:44.csv  raw_readings_2024-02-20-11:16.txt  readings_2024-02-20-11:16.csv  test_data.txt
python/: read_mag.py  readme.txt  server.py  test_client.py  trans.py
